syntax = "proto3";

package smarteros.v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "buf/validate/validate.proto";

option go_package = "github.com/SmarterCL/SmarterOS/gen/go/smarteros/v1;smarte rosv1";

// ShopifyService handles Shopify integration operations
// All RPC methods will be auto-converted to MCP tools
service ShopifyService {
  // Process incoming Shopify webhook
  rpc ProcessWebhook(ProcessWebhookRequest) returns (ProcessWebhookResponse);
  
  // Get product information
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  
  // Update product inventory
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
  
  // Create order from cart
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
  
  // Sync products to Redpanda
  rpc SyncProducts(SyncProductsRequest) returns (SyncProductsResponse);
}

message ProcessWebhookRequest {
  string tenant_id = 1 [(buf.validate.field).string.min_len = 1];
  string topic = 2 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Struct payload = 3;
  google.protobuf.Timestamp received_at = 4;
}

message ProcessWebhookResponse {
  string event_id = 1;
  string kafka_topic = 2;
  int64 kafka_offset = 3;
  bool success = 4;
  string message = 5;
}

message GetProductRequest {
  string tenant_id = 1 [(buf.validate.field).string.min_len = 1];
  string product_id = 2 [(buf.validate.field).string.min_len = 1];
  bool include_variants = 3;
}

message GetProductResponse {
  string id = 1;
  string title = 2;
  string description = 3;
  string vendor = 4;
  string product_type = 5;
  repeated ProductVariant variants = 6;
  repeated string images = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message ProductVariant {
  string id = 1;
  string title = 2;
  string price = 3;
  string sku = 4;
  int32 inventory_quantity = 5;
  bool available = 6;
}

message UpdateInventoryRequest {
  string tenant_id = 1 [(buf.validate.field).string.min_len = 1];
  string variant_id = 2 [(buf.validate.field).string.min_len = 1];
  int32 quantity = 3 [(buf.validate.field).int32.gte = 0];
  string location_id = 4;
}

message UpdateInventoryResponse {
  string inventory_item_id = 1;
  int32 available = 2;
  google.protobuf.Timestamp updated_at = 3;
  bool success = 4;
}

message CreateOrderRequest {
  string tenant_id = 1 [(buf.validate.field).string.min_len = 1];
  Customer customer = 2;
  repeated OrderLineItem line_items = 3;
  ShippingAddress shipping_address = 4;
  string currency = 5;
}

message Customer {
  string email = 1 [(buf.validate.field).string.email = true];
  string first_name = 2;
  string last_name = 3;
  string phone = 4;
}

message OrderLineItem {
  string variant_id = 1;
  int32 quantity = 2 [(buf.validate.field).int32.gte = 1];
  string price = 3;
}

message ShippingAddress {
  string address1 = 1;
  string address2 = 2;
  string city = 3;
  string province = 4;
  string country = 5;
  string zip = 6;
}

message CreateOrderResponse {
  string order_id = 1;
  string order_number = 2;
  string total_price = 3;
  string status = 4;
  google.protobuf.Timestamp created_at = 5;
}

message SyncProductsRequest {
  string tenant_id = 1 [(buf.validate.field).string.min_len = 1];
  google.protobuf.Timestamp since = 2;
  int32 limit = 3 [(buf.validate.field).int32 = {gte: 1, lte: 250}];
}

message SyncProductsResponse {
  int32 products_synced = 1;
  string kafka_topic = 2;
  repeated string product_ids = 3;
  google.protobuf.Timestamp synced_at = 4;
}
